[package]
name = "AssemblyTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
rand = "0.8.5"
aligned = "0.4.1"
crossbeam-epoch = "0.9.11"
crossbeam-utils = "0.8.12"
thread_local = "1.1.4"
parking_lot = "0.12.1"
parking_lot_core = "0.9.5"
cfg-if = "1.0.0"
# crossbeam
