[package]
name = "AssemblyTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
rand = "0.8.5"
aligned = "0.4.1"
swap-arc = { git = "https://github.com/terrarier2111/SwapArc", features = ["ptr-ops"] }
crossbeam-utils = "0.8.15"
